appId: ${APP_ID}
env:
  ACCOUNT_NAME_FROM: Test22 Source
  ACCOUNT_NAME_TO: Test22 Destination
  CATEGORY_NAME: Test22 Category
  TAG_NAME: Rules Test Tag
---

- runFlow:
    file: ../subflows/enter-app.flow.yaml

- runFlow:
    file: ../subflows/create-account.flow.yaml
    env:
      ACCOUNT_NAME: ${ACCOUNT_NAME_FROM}

- runFlow:
    file: ../subflows/create-account.flow.yaml
    env:
      ACCOUNT_NAME: ${ACCOUNT_NAME_TO}

- runFlow:
    file: ../subflows/create-category.flow.yaml
    env:
      CATEGORY_NAME: ${CATEGORY_NAME}

- runFlow:
    file: ../subflows/navigate-to-rules.flow.yaml

- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'RulesPage.CreateButton'
- waitForAnimationToEnd

- tapOn:
    id: 'RulesPage.CreateButton'
- extendedWaitUntil:
    visible: 'Create Rule'

- tapOn:
    id: 'RuleForm.Condition.0.FieldSelector'
- tapOn:
    id: RuleForm.SelectorCard.TRANSACTION_TYPE
- waitForAnimationToEnd

- tapOn:
    id: 'RuleForm.Condition.0.ValueInput'
- tapOn: 'Expense'
- waitForAnimationToEnd

- tapOn:
    id: 'RuleForm.ConditionSection.AddButton'

- tapOn:
    id: 'RuleForm.Condition.1.ValueInput'
- inputText: 'Auto Transfer'

- tapOn:
    text: 'return'
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: 'RuleForm.Action.0.TypeSelector'
    direction: DOWN

- tapOn:
    id: 'RuleForm.Action.0.TypeSelector'
- tapOn:
    id: 'RuleForm.SelectorCard.CONVERT_TO_TRANSFER'
- swipe:
    start: 50%, 50%
    end: 50%, 90%
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: 'RuleForm.Action.0.AccountSelector'
    direction: DOWN
    centerElement: true
- tapOn:
    id: 'RuleForm.Action.0.AccountSelector'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Input'
- tapOn:
    id: 'AccountPickerBottomSheet.Input'
- inputText: ${ACCOUNT_NAME_TO}
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Option.${ACCOUNT_NAME_TO}'
- tapOn:
    id: 'AccountPickerBottomSheet.Option.${ACCOUNT_NAME_TO}'
- extendedWaitUntil:
    notVisible:
      id: 'AccountPickerBottomSheet.Input'
- waitForAnimationToEnd

- tapOn:
    id: 'RuleForm.Footer.SubmitButton'
- extendedWaitUntil:
    visible:
      id: 'RulesPage.Page'

- assertVisible:
    id: 'RulesPage.RuleCard.0'
